# fred_mcp_demo

./: .gitignore  LICENSE  README.md  client.py  config.yaml  pyproject.toml  server.py  test.py  test_llm.py
agent/: main.py  mcp_tools.py
server/: app.py  tools.py
src/data/: evaluator.py  retrieval.py  setup_database.py  utils.py
src/server/: app.py  tools.py
