[project]
name = "mcp-demo"
version = "0.1.0"
description = "Basic bond evaluation system used as MCP server prototype."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.2",
    "fastmcp>=2.11.3",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "pyyaml>=6.0.2",
    "quantlib>=1.39",
]
